Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn repository
======================

 o #14874 - #14876 Added XmlBlasterException hook to react customized on XmlBlasterExceptions
   The default implementation (see Main.java) does an immediate exit of xmlBlaster for error codes 
   defined, for example "-xmlBlaster/panicErrorCodes resource.db.unknown,resource.db.unavailable"
   The exit does not shutdown with the RunlevelManager but kills the instance immediately.
   You can add your own hook implementation (here MyHandler.java) with
     java -Dorg.xmlBlaster.util.I_XmlBlasterExceptionHandler=MyHandler org.xmlBlaster.Main
   -Changed to load signal catcher already in HALTED_POST

 o #14867 Added SocketGetter to the contrib package.

 o #14845 Removed jutils completely, if you have used org.jutils code in your clients
   please port it, for some time you can download jutils.jar from
   http://www.xmlBlaster.org/jutils.jar
   The XML dump shows some timestamps now in ISO_8601 format.

 o #14840 Renamed engine.Global to engine.ServerScope
   This is an incompatible change which touches low level native plugins only

 o #14812 - #14839 Incompatible changes from jutils logging to java.util logging. 
   see helper script xmlBlaster/bin/convertJutilsToJavaLogging.sh

 o #14781 telnet access refactored, some access method names are changed, e.g.
   - getCbQueueEntries() -> getCallbackQueueEntries(String query)
   - "get topic/..." now access all I_AdminTopic methods

 o #14787 Consuming queue query
   - added consuming query for subject queue
   - added consuming query for history queue (telnet access not yet finished)
   see http://www.xmlblaster.org/xmlBlaster/doc/requirements/engine.qos.queryspec.QueueQuery.html

 o #14780 Extended telnet features (requirement admin.telnet)
   - Added support to invoke operations without bean-get/set convention