@@ -3,6 +3,12 @@ The "#99999" numbers are Subversion revision numbers.
 
 Current svn repository
 ======================
+ o 14909# Cluster fixes
+   - Setting retries=-1 as a default for remote cluster login
+   - Default is now to not disconnect at the remote clusters during shutdown
+     The old behavior can be forced by adding a <diconnect/> tag.
+   - Bugfix to not forward the '__persistenceId' marker client property from subscribeQos to the remote node
+   - Fixed cluster example: Added SubscriptionPersistencePlugin to xmlBlasterPlugins.xml
 
  o #14874 - #14876 Added XmlBlasterException hook to react customized on XmlBlasterExceptions
    The default implementation (see Main.java) does an immediate exit of xmlBlaster for error codes 
